--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <p>Я люблю спорт, программировать</p>
 
         <h4>Мои социальные сети</h4>
-
         <a href="https://www.instagram.com/rodion.dubrov/" target="_blank">Instagram</a>
         |
         <a href="https://t.me/ddrdmr" target="_blank">Telegram</a>
       </div>
+
     </div>
 
 
@@ -67,8 +67,7 @@
             Курс [2021]</a>
         </li>
         <li>
-          <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0">JavaScript Основы для Начинающих - Полный Курс за 6
-            часов [2020]</a>
+          <a href="https://www.youtube.com/watch?v=SpCUuyZZTp8">CSS для Начинающих - Практический Курс [2021]</a>
         </li>
       </ul>
 
@@ -86,7 +85,7 @@
 
           <div class="form-group">
             <label for="email">Ваш email:</label>
-            <input type="email" id="email" placeholder="Введите ваше email">
+            <input type="email" id="email" placeholder="Введите email">
           </div>
         </div>
 
@@ -105,12 +104,7 @@
 
       </div>
     </div>
-
-
   </div>
-
-
-
 
 
   <div style="margin-bottom: 500px;"></div>
