--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         <li>
           <a href="https://www.youtube.com/watch?v=SpCUuyZZTp8">CSS для Начинающих - Практический Курс [2021]</a>
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0">JavaScript Основы для Начинающих - Полный Курс за 6 часов [2020]</a>
+        </li>   
       </ul>
 
     </div>
